# ZAPPY

./: LICENSE  Makefile  README.md  algo.py  mouvements.py  routine.py
Server/: Makefile
Server/include/: lib.h  server.h
Server/source/: build_map_game.c  client_msg.c  client_msg_bis.c  error_handling.c  free_server.c  free_server_bis.c  handle_player_life.c  init_server.c  main.c  manag_cmd.c  manag_cmd_bis.c  manag_gui.c  manag_gui_bis.c  manag_player_list.c  new_client.c  other_function_for_error.c  place_ressources.c  player.c  reload_map.c  run_server.c  select.c  signal.c  str_to_word_array.c  team.c  team_bis.c  time.c  tool_cmd.c  utils.c  utils_bis.c  utils_map.c  utils_second.c
Server/source/command/gui/: all_cmd_map.c  player.c  (+2 more)
ia/: Makefile  broadcast_check.py  call_ia.py  commandes.py  communication.py  data.py  incant.py  inventor.py  level_up.py  locate_mouv.py  main.py
ia/include/: lib.h
ia/source/: build_map_game.c  init_server.c  main.c  note.txt
include/: server.h
map/: CMakeLists.txt  Findraylib.cmake
map/images/eggs/: license.txt  scene.gltf
map/images/gemStone/: license.txt  scene.gltf
map/images/island3d/: island.gltf  island.mtl
map/images/main_menu/beach_island/: license.txt
map/images/meat/: scene.gltf
map/images/meat/test/: scene.gltf
map/include/: Error.hpp  Parser.hpp  Server.hpp  Threads.hpp  zappyMap.hpp
map/src/: Button.cpp  Parser.cpp  Protocole.cpp  Server.cpp  Sound.cpp  Threads.cpp  main.cpp  playerAI.cpp  window.cpp
source/: error_handling.c  free_server.c  other_function_for_error.c  run_server.c
(+17 files in other folders)
